--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "my-countdown",
+  "name": "mrsong-countdown",
   "description": "A Vue.js project",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "author": "Song <289097246@qq.com>",
   "license": "MIT",
-  "private": true,
+  "private": false,
+  "main": "dist/mrsongCountdown.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
