--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mrsong-countdown",
   "description": "A Vue.js project",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "author": "Song <289097246@qq.com>",
   "license": "MIT",
   "private": false,
@@ -32,5 +32,13 @@
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/song-jun/mrsong-countdown.git"
+  },
+  "bugs": {
+    "url": "https://github.com/song-jun/mrsong-countdown/issues"
+  },
+  "homepage": "https://github.com/song-jun/mrsong-countdown#readme"
 }
