--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mrsong-countdown",
   "description": "A Vue.js project",
-  "version": "1.0.4",
+  "version": "1.0.8",
   "author": "Song <289097246@qq.com>",
   "license": "MIT",
   "private": false,
@@ -35,7 +35,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/song-jun/mrsong-countdown.git"
+    "url": "git+https://github.com/song-jun/mrsong-countdown.git"
   },
   "bugs": {
     "url": "https://github.com/song-jun/mrsong-countdown/issues"
