--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mrsong-countdown",
   "description": "A Vue.js project",
-  "version": "1.0.8",
+  "version": "1.2.1",
   "author": "Song <289097246@qq.com>",
   "license": "MIT",
   "private": false,
@@ -40,5 +40,8 @@
   "bugs": {
     "url": "https://github.com/song-jun/mrsong-countdown/issues"
   },
-  "homepage": "https://github.com/song-jun/mrsong-countdown#readme"
+  "homepage": "https://github.com/song-jun/mrsong-countdown#readme",
+  "keywords": [
+    "js"
+  ]
 }
